--- a/tasks_1.html
+++ b/tasks_1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Event Examples</title>
+    <title>tasks_1</title>
     <style>
 
         #secretMessage {
